[package]
name = "stress_test_initialization_cmd"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
clap = { version="3.2.8", features = ["derive"] }
sysinfo = "0.26.2"
firebase-rs = "2.0.5"
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = "1.0.143"
reqwest = { version="0.11.11", features = ["json"] }
serde_json = "1.0.83"
serde_yaml = "0.9.14"
